--- a/Maintenance dashboard/Maintenance dashboard.csproj
+++ b/Maintenance dashboard/Maintenance dashboard.csproj
@@ -67,7 +67,7 @@
     <Compile Include="MainLogic\PlcIsConnected.cs" />
     <Compile Include="MainLogic\PlcIsDisconnected.cs" />
     <Compile Include="PlcConnection\IPlcNetLibrariesBaseInterface.cs" />
-    <Compile Include="PlcConnection\PlcConnection.cs" />
+    <Compile Include="PlcConnection\PlcNetInterface.cs" />
     <Compile Include="WindowControl\AddRegisterToolControl.xaml.cs">
       <DependentUpon>AddRegisterToolControl.xaml</DependentUpon>
     </Compile>
