--- a/Maintenance dashboard/Maintenance dashboard.csproj
+++ b/Maintenance dashboard/Maintenance dashboard.csproj
@@ -71,8 +71,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="DashbordViewModel\AddEmployee\AddEmployeeControl.xaml.cs">
-      <DependentUpon>AddEmployeeControl.xaml</DependentUpon>
+    <Compile Include="DashbordViewModel\AddEmployee\EmployeeControl.xaml.cs">
+      <DependentUpon>EmployeeControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="DashbordViewModel\AddEmployee\ViewModel.cs" />
     <Compile Include="DashbordViewModel\AddRegisterTool\AddRegisterToolControl.xaml.cs">
@@ -105,16 +105,13 @@
     <Compile Include="Domain\WorkshopDbContext.cs" />
     <Compile Include="Domain\Employee.cs" />
     <Compile Include="PlcConnection\Sharp7.cs" />
-    <Compile Include="DashbordViewModel\EmployessList\EmployeesListControl.xaml.cs">
-      <DependentUpon>EmployeesListControl.xaml</DependentUpon>
-    </Compile>
     <Compile Include="DashbordViewModel\HomeControl\HomeControl.xaml.cs">
       <DependentUpon>HomeControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="DashbordViewModel\RegisterToolControl\RegisterToolListControl.xaml.cs">
       <DependentUpon>RegisterToolListControl.xaml</DependentUpon>
     </Compile>
-    <Page Include="DashbordViewModel\AddEmployee\AddEmployeeControl.xaml">
+    <Page Include="DashbordViewModel\AddEmployee\EmployeeControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -134,10 +131,6 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="DashbordViewModel\EmployessList\EmployeesListControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="DashbordViewModel\HomeControl\HomeControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -197,7 +190,6 @@
   <ItemGroup>
     <Resource Include="Resources\MarelliLogo.jpg" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
