--- a/Maintenance dashboard/Maintenance dashboard.csproj
+++ b/Maintenance dashboard/Maintenance dashboard.csproj
@@ -71,13 +71,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="DashbordViewModel\AddEmployee\EmployeeControl.xaml.cs">
+    <Compile Include="DashbordView\EmployeeControl\EmployeeControl.xaml.cs">
       <DependentUpon>EmployeeControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DashbordViewModel\AddEmployee\ViewModel.cs" />
-    <Compile Include="DashbordViewModel\AddRegisterTool\AddRegisterToolControl.xaml.cs">
-      <DependentUpon>AddRegisterToolControl.xaml</DependentUpon>
+    <Compile Include="DashbordView\RegisterToolControl\RegisterToolValidation.cs" />
+    <Compile Include="DashbordView\RegisterToolControl\RegisterToolControl.xaml.cs">
+      <DependentUpon>RegisterToolControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="DashbordView\EmployeeControl\EmployeeValidation.cs" />
     <Compile Include="Domain\RegisterTool.cs" />
     <Compile Include="Migrations\202004161712421_InitialModel.cs" />
     <Compile Include="Migrations\202004161712421_InitialModel.designer.cs">
@@ -105,17 +106,14 @@
     <Compile Include="Domain\WorkshopDbContext.cs" />
     <Compile Include="Domain\Employee.cs" />
     <Compile Include="PlcConnection\Sharp7.cs" />
-    <Compile Include="DashbordViewModel\HomeControl\HomeControl.xaml.cs">
+    <Compile Include="DashbordView\HomeControl\HomeControl.xaml.cs">
       <DependentUpon>HomeControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DashbordViewModel\RegisterToolControl\RegisterToolListControl.xaml.cs">
-      <DependentUpon>RegisterToolListControl.xaml</DependentUpon>
-    </Compile>
-    <Page Include="DashbordViewModel\AddEmployee\EmployeeControl.xaml">
+    <Page Include="DashbordView\EmployeeControl\EmployeeControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="DashbordViewModel\AddRegisterTool\AddRegisterToolControl.xaml">
+    <Page Include="DashbordView\RegisterToolControl\RegisterToolControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -131,11 +129,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="DashbordViewModel\HomeControl\HomeControl.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="DashbordViewModel\RegisterToolControl\RegisterToolListControl.xaml">
+    <Page Include="DashbordView\HomeControl\HomeControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
