--- a/Maintenance dashboard/Maintenance dashboard.csproj
+++ b/Maintenance dashboard/Maintenance dashboard.csproj
@@ -71,8 +71,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Views\AddPaddleControl\AddPadleControl.xaml.cs">
+      <DependentUpon>AddPadleControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\EmployeeControl\EmployeeControl.xaml.cs">
       <DependentUpon>EmployeeControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\PaddleControl\PaddleControl.xaml.cs">
+      <DependentUpon>PaddleControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\RegisterToolControl\RegisterToolValidation.cs" />
     <Compile Include="Views\RegisterToolControl\RegisterToolControl.xaml.cs">
@@ -109,7 +115,15 @@
     <Compile Include="Views\HomeControl\HomeControl.xaml.cs">
       <DependentUpon>HomeControl.xaml</DependentUpon>
     </Compile>
+    <Page Include="Views\AddPaddleControl\AddPadleControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\EmployeeControl\EmployeeControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\PaddleControl\PaddleControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
