--- a/Maintenance dashboard/Maintenance_dashboard.Client.csproj
+++ b/Maintenance dashboard/Maintenance_dashboard.Client.csproj
@@ -107,11 +107,8 @@
       <DependentUpon>202004211714483_ChangedPropertyNameInEmployeeAndRegisterToolTable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="PlcConnection\IPlcNetLibrariesBaseInterface.cs" />
-    <Compile Include="PlcConnection\PlcNetInterface.cs" />
     <Compile Include="Models\WorkshopDbContext.cs" />
     <Compile Include="Models\Employee.cs" />
-    <Compile Include="PlcConnection\Sharp7.cs" />
     <Compile Include="Views\HomeControl\HomeControl.xaml.cs">
       <DependentUpon>HomeControl.xaml</DependentUpon>
     </Compile>
@@ -197,6 +194,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\MarelliLogo.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MaintenanceDashbord.Library\Maintenance_dashbord.Library.csproj">
+      <Project>{491c2945-9dc9-4b47-bc61-1f913ddbfd85}</Project>
+      <Name>Maintenance_dashbord.Library</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.0.1\build\MaterialDesignThemes.targets')" />
