--- a/MaintenanceDashbord.Library/Maintenance_dashbord.Library.csproj
+++ b/MaintenanceDashbord.Library/Maintenance_dashbord.Library.csproj
@@ -41,10 +41,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PlcConnection\IPlcNetLibrariesBaseInterface.cs" />
-    <Compile Include="PlcConnection\PlcNetInterface.cs" />
-    <Compile Include="PlcConnection\Sharp7.cs" />
+    <Compile Include="ObservableObject.cs" />
+    <Compile Include="PlcNetInterface\IPlcNetLibrariesBaseInterface.cs" />
+    <Compile Include="PlcNetInterface\PlcNetInterface.cs" />
+    <Compile Include="PlcNetInterface\Sharp7.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
