--- a/MaintenanceDashbord.Tests/Maintenance_dashbord.Tests.csproj
+++ b/MaintenanceDashbord.Tests/Maintenance_dashbord.Tests.csproj
@@ -58,8 +58,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FunctionalTests\DatabaseScenarioTests.cs" />
+    <Compile Include="UnitTests\ObsevableObjectTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UnitTests\WorkshopDbContextTest.cs" />
+    <Compile Include="UnitTests\ViewModelTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -69,6 +70,10 @@
     <ProjectReference Include="..\Maintenance dashboard\Maintenance_dashboard.Client.csproj">
       <Project>{7831659a-ca23-4dd5-92ca-6f3bb8bf583b}</Project>
       <Name>Maintenance_dashboard.Client</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MaintenanceDashbord.Library\Maintenance_dashbord.Library.csproj">
+      <Project>{491c2945-9dc9-4b47-bc61-1f913ddbfd85}</Project>
+      <Name>Maintenance_dashbord.Library</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup />
