--- a/Maintenance dashboard/MaintenanceDashboard.Client.csproj
+++ b/Maintenance dashboard/MaintenanceDashboard.Client.csproj
@@ -7,8 +7,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7831659A-CA23-4DD5-92CA-6F3BB8BF583B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>MaintenanceDashboard</RootNamespace>
-    <AssemblyName>MaintenanceDashboard</AssemblyName>
+    <RootNamespace>MaintenanceDashboard.Client</RootNamespace>
+    <AssemblyName>MaintenanceDashboard.Client</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -86,6 +86,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\RegisterToolModel.cs" />
     <Compile Include="Views\AddPaddleControl\AddPadleControl.xaml.cs">
       <DependentUpon>AddPadleControl.xaml</DependentUpon>
     </Compile>
@@ -216,9 +217,7 @@
       <Name>MaintenanceDashbord.Library</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
       <Visible>False</Visible>
