--- a/MaintenanceDashbord.Library.Tests/MaintenanceDashbord.Library.Tests.csproj
+++ b/MaintenanceDashbord.Library.Tests/MaintenanceDashbord.Library.Tests.csproj
@@ -57,7 +57,6 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FunctionalTests\DatabaseScenarioTests.cs" />
     <Compile Include="UnitTests\ObsevableObjectTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTests\ViewModelTests.cs" />
@@ -67,16 +66,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Maintenance dashboard\MaintenanceDashboard.Client.csproj">
-      <Project>{7831659a-ca23-4dd5-92ca-6f3bb8bf583b}</Project>
-      <Name>MaintenanceDashboard.Client</Name>
-    </ProjectReference>
     <ProjectReference Include="..\MaintenanceDashbord.Library\MaintenanceDashbord.Library.csproj">
       <Project>{491c2945-9dc9-4b47-bc61-1f913ddbfd85}</Project>
       <Name>MaintenanceDashbord.Library</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="FunctionalTests\" />
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
