--- a/MaintenanceDashboard.Data.Tests/MaintenanceDashboard.Data.Tests.csproj
+++ b/MaintenanceDashboard.Data.Tests/MaintenanceDashboard.Data.Tests.csproj
@@ -55,7 +55,6 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FunctionalTests\DatabaseScenerioTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -63,6 +62,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="FunctionalTests\" />
     <Folder Include="UnitTests\" />
   </ItemGroup>
   <ItemGroup>
