--- a/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
+++ b/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
@@ -55,11 +55,21 @@
     <Compile Include="Domain\Paddle.cs" />
     <Compile Include="Domain\RegisterTool.cs" />
     <Compile Include="Domain\WorkshopDbContext.cs" />
+    <Compile Include="Migrations\202005180821271_AddDataModelWorkshopDbContext.cs" />
+    <Compile Include="Migrations\202005180821271_AddDataModelWorkshopDbContext.designer.cs">
+      <DependentUpon>202005180821271_AddDataModelWorkshopDbContext.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202005180821271_AddDataModelWorkshopDbContext.resx">
+      <DependentUpon>202005180821271_AddDataModelWorkshopDbContext.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
