--- a/Maintenance dashboard.Client/App.config
+++ b/Maintenance dashboard.Client/App.config
@@ -10,6 +10,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
   <connectionStrings>
-    <add name="WorkshopDbContext" connectionString="data source=.\SQLEXPRESS;initial catalog=MaintenanceDashbord; integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DataContext" connectionString="data source=.\SQLEXPRESS;initial catalog=MaintenanceDashbord; integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
