--- a/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
+++ b/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
@@ -54,10 +54,11 @@
     <Compile Include="Domain\Employee.cs" />
     <Compile Include="Domain\Paddle.cs" />
     <Compile Include="Domain\RegisterTool.cs" />
-    <Compile Include="Domain\WorkshopDbContext.cs" />
-    <Compile Include="Migrations\202005180821271_AddDataModelWorkshopDbContext.cs" />
-    <Compile Include="Migrations\202005180821271_AddDataModelWorkshopDbContext.designer.cs">
-      <DependentUpon>202005180821271_AddDataModelWorkshopDbContext.cs</DependentUpon>
+    <Compile Include="Domain\DataContext.cs" />
+    <Compile Include="Domain\WorkshopContext.cs" />
+    <Compile Include="Migrations\202005180935424_AddDataModel.cs" />
+    <Compile Include="Migrations\202005180935424_AddDataModel.designer.cs">
+      <DependentUpon>202005180935424_AddDataModel.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -67,8 +68,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202005180821271_AddDataModelWorkshopDbContext.resx">
-      <DependentUpon>202005180821271_AddDataModelWorkshopDbContext.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202005180935424_AddDataModel.resx">
+      <DependentUpon>202005180935424_AddDataModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
