--- a/MaintenanceDashbord.Library.Tests/MaintenanceDashbord.Library.Tests.csproj
+++ b/MaintenanceDashbord.Library.Tests/MaintenanceDashbord.Library.Tests.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="UnitTests\ActionCommandTests.cs" />
     <Compile Include="UnitTests\ObsevableObjectTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTests\ViewModelTests.cs" />
